Fix scrollbar colors

--- a/css/configurable-omega.styles.css
+++ b/css/configurable-omega.styles.css
@@ -1574,7 +1574,8 @@ html.js fieldset.collapsed {
   .front #content .pane-articles-test-panel-pane-8,
   .front #content .pane-panopoly-faq-panel-pane-6,
   .front #content .pane-news-test-panel-pane-7 {
-    background: url(../images/banner.jpg) center center; }
+    background: url(../images/banner.jpg) center center;
+    background-size: cover; }
   .front #content .pane-press-releases-test-panel-pane-7 {
     background-color: #f5f5f5; }
     .front #content .pane-press-releases-test-panel-pane-7 .views-row {
@@ -1974,14 +1975,13 @@ These style are to make video from a media field as responsive. The video fields
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px; }
+  background: #eee;
+  border: 1px solid #e6e6e6; }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: rgba(204, 204, 204, 0.8);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
+  background: #ababab; }
 
 ::-webkit-scrollbar-thumb:window-inactive {
   background: rgba(0, 255, 0, 0.4); }
@@ -1996,13 +1996,12 @@ body {
   background: transparent; }
 
 .jspTrack {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px; }
+  background: #eee;
+  border: 1px solid #e6e6e6; }
 
 .jspDrag {
   border-radius: 10px;
-  background: rgba(204, 204, 204, 0.8);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
+  background: #ababab; }
 
 .jspScrollable, .jspContainer, .scroll-pane {
   width: 100% !important; }
