--- a/sass/components/_homepage.scss
+++ b/sass/components/_homepage.scss
@@ -63,6 +63,7 @@
 	.pane-panopoly-faq-panel-pane-6,
 	.pane-news-test-panel-pane-7 {
 		background: url(../images/banner.jpg) center center;
+		background-size: cover;
 	}
 
 	.pane-press-releases-test-panel-pane-7 {
