--- a/sass/components/_scrollbars.scss
+++ b/sass/components/_scrollbars.scss
@@ -4,15 +4,14 @@
  
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
+    background: #eee;
+    border: 1px solid #e6e6e6;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: rgba(204, 204, 204, 0.8);
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    background: #ababab;
 }
 ::-webkit-scrollbar-thumb:window-inactive {
 	background: rgba(0,255,0,0.4); 
@@ -30,14 +29,13 @@ body {
 }
 
 .jspTrack {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
+    background: #eee;
+    border: 1px solid #e6e6e6;
 }
  
 .jspDrag {
     border-radius: 10px;
-    background: rgba(204, 204, 204, 0.8);
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    background: #ababab;
 }
 
 .jspScrollable, .jspContainer, .scroll-pane {
